# docs/swagger.json
@@ -9,32 +9,7 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/api/v1": {
-            "get": {
-                "description": "Simple greeting on index page",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "urls"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/login": {
+        "/login": {
             "post": {
                 "description": "Login with user details",
                 "consumes": [
@@ -46,28 +21,42 @@
                 "tags": [
                     "authentication"
                 ],
+                "parameters": [
+                    {
+                        "description": "payload",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_0xMarvell_scissor_pkg_models.LoginRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/github_com_0xMarvell_scissor_pkg_models.LoginResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/github_com_0xMarvell_scissor_pkg_models.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_0xMarvell_scissor_pkg_models.ErrorResponse"
                         }
                     }
                 }
             }
         },
-        "/api/v1/logout": {
+        "/logout": {
             "get": {
                 "description": "Logout of user account",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -75,22 +64,19 @@
                     "authentication"
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/github_com_0xMarvell_scissor_pkg_models.LogoutResponse"
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "Bad Request"
                     }
                 }
             }
         },
-        "/api/v1/shortener/redirect/{shortURL}": {
+        "/shortener/redirect/{shortURL}": {
             "get": {
                 "description": "Redirect short url to original url",
                 "produces": [
@@ -99,6 +85,15 @@
                 "tags": [
                     "urls"
                 ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Short URL",
+                        "name": "shortURL",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "301": {
                         "description": "Moved Permanently"
@@ -106,13 +101,13 @@
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/github_com_0xMarvell_scissor_pkg_models.ErrorResponse"
                         }
                     }
                 }
             }
         },
-        "/api/v1/shortener/shorten": {
+        "/shortener/shorten": {
             "post": {
                 "description": "Get original url and created a shortened version",
                 "consumes": [
@@ -124,23 +119,34 @@
                 "tags": [
                     "urls"
                 ],
+                "parameters": [
+                    {
+                        "description": "payload",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_0xMarvell_scissor_pkg_models.ShortenURLRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/github_com_0xMarvell_scissor_pkg_models.ShortenResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/github_com_0xMarvell_scissor_pkg_models.ErrorResponse"
                         }
                     }
                 }
             }
         },
-        "/api/v1/shortener/url/{urlID}": {
+        "/shortener/url/{urlID}": {
             "delete": {
                 "description": "Delete a url by its ID",
                 "produces": [
@@ -153,7 +159,7 @@
                     {
                         "type": "integer",
                         "description": "Url ID",
-                        "name": "id",
+                        "name": "urlID",
                         "in": "path",
                         "required": true
                     }
@@ -165,13 +171,13 @@
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/github_com_0xMarvell_scissor_pkg_models.ErrorResponse"
                         }
                     }
                 }
             }
         },
-        "/api/v1/shortener/urls": {
+        "/shortener/urls": {
             "get": {
                 "description": "Retrieve all shortened urls created by each user",
                 "produces": [
@@ -184,19 +190,16 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_0xMarvell_scissor_pkg_models.URL"
+                            "$ref": "#/definitions/github_com_0xMarvell_scissor_pkg_models.GetURLsResponse"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "Not Found"
                     }
                 }
             }
         },
-        "/api/v1/signup": {
+        "/signup": {
             "post": {
                 "description": "Create a new user with the provided details",
                 "consumes": [
@@ -208,23 +211,34 @@
                 "tags": [
                     "authentication"
                 ],
+                "parameters": [
+                    {
+                        "description": "payload",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_0xMarvell_scissor_pkg_models.SignupRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/github_com_0xMarvell_scissor_pkg_models.User"
+                            "$ref": "#/definitions/github_com_0xMarvell_scissor_pkg_models.SignupResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/github_com_0xMarvell_scissor_pkg_models.ErrorResponse"
                         }
                     }
                 }
             }
         },
-        "/api/v1/users": {
+        "/users": {
             "get": {
                 "description": "Retrieve all existing user accounts",
                 "produces": [
@@ -237,19 +251,16 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_0xMarvell_scissor_pkg_models.User"
+                            "$ref": "#/definitions/github_com_0xMarvell_scissor_pkg_models.GetUsersResponse"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "Not Found"
                     }
                 }
             }
         },
-        "/api/v1/users/profile": {
+        "/users/profile": {
             "get": {
                 "description": "Retrieve an existing user",
                 "produces": [
@@ -262,20 +273,162 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_0xMarvell_scissor_pkg_models.User"
+                            "$ref": "#/definitions/github_com_0xMarvell_scissor_pkg_models.GetUserResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_0xMarvell_scissor_pkg_models.ErrorResponse"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "Not Found"
                     }
                 }
             }
         }
     },
     "definitions": {
+        "github_com_0xMarvell_scissor_pkg_models.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_0xMarvell_scissor_pkg_models.GetURLsResponse": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "success": {
+                    "type": "boolean"
+                },
+                "urls": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_0xMarvell_scissor_pkg_models.URL"
+                    }
+                }
+            }
+        },
+        "github_com_0xMarvell_scissor_pkg_models.GetUserResponse": {
+            "type": "object",
+            "properties": {
+                "success": {
+                    "type": "boolean"
+                },
+                "user": {}
+            }
+        },
+        "github_com_0xMarvell_scissor_pkg_models.GetUsersResponse": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "success": {
+                    "type": "boolean"
+                },
+                "users": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_0xMarvell_scissor_pkg_models.User"
+                    }
+                }
+            }
+        },
+        "github_com_0xMarvell_scissor_pkg_models.LoginRequest": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "example": "hero108"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "linchung"
+                }
+            }
+        },
+        "github_com_0xMarvell_scissor_pkg_models.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "login successful"
+                },
+                "success": {
+                    "type": "boolean",
+                    "example": true
+                }
+            }
+        },
+        "github_com_0xMarvell_scissor_pkg_models.LogoutResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": " logout successful"
+                },
+                "success": {
+                    "type": "boolean",
+                    "example": true
+                }
+            }
+        },
+        "github_com_0xMarvell_scissor_pkg_models.ShortenResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "short url created successfully"
+                },
+                "short_url": {
+                    "type": "string",
+                    "example": "http://localhost:8080/api/v1/8KKoJCy"
+                }
+            }
+        },
+        "github_com_0xMarvell_scissor_pkg_models.ShortenURLRequest": {
+            "type": "object",
+            "properties": {
+                "url": {
+                    "type": "string",
+                    "example": "https://google.com"
+                }
+            }
+        },
+        "github_com_0xMarvell_scissor_pkg_models.SignupRequest": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "example": "hero108"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "linchung"
+                }
+            }
+        },
+        "github_com_0xMarvell_scissor_pkg_models.SignupResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                },
+                "user": {
+                    "$ref": "#/definitions/github_com_0xMarvell_scissor_pkg_models.User"
+                }
+            }
+        },
         "github_com_0xMarvell_scissor_pkg_models.URL": {
             "type": "object",
             "properties": {
