# pkg/models/error.go
@@ -1,0 +1,6 @@
+package models
+
+// Response body for errors
+type ErrorResponse struct {
+	Error string `json:"error"`
+}
